--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -111,5 +111,11 @@
         android:label="SignInFragment"
         tools:layout="@layout/fragment_sign_in" />
 
+    <fragment
+        android:id="@+id/cartFragment"
+        android:name="ir.jatlin.topmarket.ui.purchase.cart.CartFragment"
+        android:label="CartFragment"
+        tools:layout="@layout/fragment_cart" />
+
 
 </navigation>
