--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -47,6 +47,37 @@
 
                 </FrameLayout>
 
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/empty_cart_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/space_very_small"
+                    android:background="?attr/colorSurface"
+                    android:orientation="vertical"
+                    android:padding="@dimen/space_medium"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/register_item_container">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_empty_cart" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        style="@style/TextAppearance.MarketApp.BodySmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:text="@string/empty_cart" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cart_order_items_container"
                     android:layout_width="match_parent"
@@ -353,6 +384,12 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cart_purchase_overview_container" />
+
+                <androidx.constraintlayout.widget.Group
+                    android:id="@+id/cart_group_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:constraint_referenced_ids="cart_order_items_container,deliver_free_container,cart_purchase_overview_container,purchase_warning" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
@@ -368,6 +405,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
+                android:id="@+id/purchase_apply_container"
                 android:layout_height="match_parent">
 
                 <com.google.android.material.textview.MaterialTextView
