--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,10 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/mapFragment"
+        android:contentDescription="@string/my_profile"
+        android:enabled="true"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/my_profile" />
+
+    <item
         android:id="@+id/purchaseFragment"
         android:contentDescription="@string/cart"
         android:enabled="true"
-        android:icon="@drawable/ic_add_shopping_cart_24"
+        android:icon="@drawable/ic_shop_24"
         android:title="@string/cart" />
 
     <item
