--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Accent brand color -->
         <item name="colorAccent">@color/digi_blue_200</item>
+        <!-- Other colors -->
+        <item name="colorSecondaryContainer">@color/digi_red_color_100</item>
         <!-- Status bar color. -->
         <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/use_light_status</item>
         <item name="android:statusBarColor">@color/transparent</item>
