--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -15,8 +15,8 @@
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:map="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -43,16 +43,16 @@
             android:id="@+id/map"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            map:cameraTilt="30"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
+            map:cameraTilt="30"
             map:uiCompass="false"
-            map:uiScrollGestures="true"
-            map:uiZoomGestures="true"
             map:uiRotateGestures="true"
-            map:uiZoomControls="true" />
+            map:uiScrollGestures="true"
+            map:uiZoomControls="true"
+            map:uiZoomGestures="true" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/coordinatorLayout"
@@ -65,6 +65,16 @@
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintVertical_bias="0.0">
 
+
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/fab_add_location"
+                style="@style/Widget.Market.LocationFloatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|start"
+                android:layout_margin="@dimen/space_medium"
+                android:text="@string/approve"
+                app:icon="@drawable/ic_done_24" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
